# ChemFlow

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
assets/css/: styles.css
dataset/combined/: PI3K_combined_pivot.csv  pi3k_alpha_combined_labeled.csv
example/gpt_training/: conf.toml  conf_fine_tune.toml  generate.sh  generated_smiles.txt  train.sh
example/graphormer_training/: classification_conf.toml  predict.sh  regression_conf.toml  train.sh
smiles_tokenizer/: tokenizer.json  tokenizer_config.json
src/: chemoinformatics.py  clustering.py
src/SQL/: query.py
src/chemflow/chemistry/: clustering.py  similarity_search.py
src/chemflow/curation/: extract_bindingdb_data.py  extract_chembl_data.py  (+2 more)
src/cli/: generate.py  main.py  predict.py  train.py
src/config/: __init__.py  conf.toml  grid_search_conf.yaml  ml_model_conf.yaml
src/gpt/: conf copy.toml  conf.toml  config.py  generator.py  model.py  multihead_attention.py  quant_noise.py  train.py  train.sh  train_ddp.py
src/hpc/: train.sh  trainer.py
src/pages/: Data_Extraction.py  Database_Combination.py  Machine_Learning_Models.py  Predictor.py  home.py
src/plot/: __init__.py  plot.py
src/plots/: model_plots.py
src/predictor/: featurize.py
src/streamlit/: data_extraction.py  plot_widgets.py
src/train/: train_runner.py
src/utils/: __init__.py  check_status.py  chem.py  design.py  select_dir.py  select_file.py  style.py
train/: gpt_train.sh
training_example/diffusion_training/: conf.toml  train.sh
training_example/gpt_training/: conf.toml  train.sh
(+129 files in other folders)
